build: compose JVM library conventions